[package]
name = "cruster"
version = "0.4.1"
edition = "2021"
authors = ["Andrey Ivanov"]
description = "Something between MitMProxy, Burp Suite/ZAP and nuclei"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
async-trait = "0.1.7"
regex = "1.6.0"
hyper = { version = "0.14.7", features = ["full"] }
bstr = "0.2.1"
rand = { version = "0.8.0"}
http = "0.2.0"
tokio = { version = "1.6.1", features = ["full"] }
time = { version = "0.3.1" }
hudsucker = { version = "0.17.2", features = ["full"] }
# ---------------------------------------------------------------------
# TUI
tui = "0.18.0"
crossterm = "0.23.2"
# ---------------------------------------------------------------------
# Cursive
cursive = "0.*"
cursive_table_view = "0.*"
crossbeam-channel = "0.5.6"
# ---------------------------------------------------------------------
# Configuration
shellexpand = "2.1.0"
clap = "2.34.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
flate2 = "1.0.24"
log4rs = "1.2.0"
log = "0.4.17"
rcgen = { version = "0.9.0", features = ["x509-parser", "pem"]}
