[package]
name = "cruster"
version = "0.5.0"
edition = "2021"
authors = ["Andrey Ivanov"]
description = "Something between MitMProxy, Burp Suite/ZAP and Nuclei"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
async-trait = "0.1.7"
regex = "1.6.0"
hyper = { version = "0.14.7", features = ["http1", "http2", "client"] }
hyper-rustls = { version = "0.23.2", features = ["webpki-roots", "http2"]}
# reqwest = { version = "0.11.13", features = ["blocking"] }
bstr = "0.2.1"
rand = { version = "0.8.0"}
http = "0.2.0"
tokio = { version = "1.6.1", features = ["full"] }
time = { version = "0.3.1" }
hudsucker = { version = "0.19.0", features = ["http2", "rustls-client"] }
rustls-pemfile = { version = "1.0.1", optional = true}
# ---------------------------------------------------------------------
# Cursive
# cursive = "0.20.0"
cursive = { version = "0.20.0", default_features = false, optional = true }
cursive_table_view = "0.14.0"
crossbeam-channel = "0.5.6"
cursive_buffered_backend = "0.6.1"
# ---------------------------------------------------------------------
# Configuration
shellexpand = "2.1.0"
clap = "2.34.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
serde_json = "1.0.89"
flate2 = "1.0.24"
log4rs = "1.2.0"
log = "0.4.17"
base64 = "0.13.1"
rcgen = { version = "0.10.0", features = ["x509-parser", "pem"]}

[features]
crossterm = ["cursive/crossterm-backend"]
rcgen-ca = ["hudsucker/rcgen-ca", "dep:rustls-pemfile"]
default = ["crossterm", "rcgen-ca"]
ncurses = ["cursive/ncurses-backend"]
openssl-ca = ["hudsucker/openssl-ca"]
termion = ["cursive/termion-backend"]
